components-apps/devland/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devland
  namespace: devland
  labels:
    app.kubernetes.io/name: devland
    app.kubernetes.io/part-of: devland-2027
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: devland
  template:
    metadata:
      labels:
        app.kubernetes.io/name: devland
        app.kubernetes.io/part-of: devland-2027
    spec:
      containers:
        - name: nginx
          image: ghcr.io/pixeljonas/devland-2027
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 128Mi
              cpu: 200m
          livenessProbe:
            httpGet:
              path: /de/
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /de/
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          volumeMounts:
            - name: gallery-originals
              mountPath: /opt/app-root/src/gallery-originals/dd-2026
      volumes:
        - name: gallery-originals
          persistentVolumeClaim:
            claimName: devland-gallery-originals
