components-apps/devland/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devland
  namespace: devland
  labels:
    app.kubernetes.io/name: devland
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: devland
